重写 CORE 模块内容（未完成）